[package]
name = "wgpu-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.11.3"
log = "0.4.21"
wgpu = "0.19.3"
winit = "0.29.14"

[lib]
create-type = ["cdylib", "rlib"]

[target."cfg(target_arch = \"wasm32\")".dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
wgpu = "0.19.3"
